@@ -60,7 +60,7 @@ public:
     void                save(const GFilename& filename,
                              const bool&      clobber = false) const;
     const GSkyMap&      cube(void) const;
-    const GEbounds&     ebounds(void) const;
+    const GEnergies&    energies(void) const;
     const GNodeArray&   elogmeans(void) const;
     const GFilename&    filename(void) const;
 };
