@@ -1,0 +1,21 @@
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<source_library title="source library">
+  <source name="MAGIC Crab (Albert et al. 2008, ApJ, 674, 1037)" type="PointSource">
+    <spectrum type="PowerLaw">
+      <parameter name="Prefactor" value="5.7" error="0" scale="1e-16" min="1e-07" max="1000" free="1" />
+      <parameter name="Index" value="2.48" error="0" scale="-1" min="0" max="5" free="1" />
+      <parameter name="Scale" value="0.3" scale="1e+06" min="0.01" max="1000" free="0" />
+    </spectrum>
+    <spatialModel type="SkyDirFunction">
+      <parameter name="RA" value="83.6331" scale="1" min="-360" max="360" free="0" />
+      <parameter name="DEC" value="22.0145" scale="1" min="-90" max="90" free="0" />
+    </spatialModel>
+  </source>
+  <source name="BackgroundModel" type="CTACubeBackground" instrument="CTA,HESS,MAGIC,VERITAS">
+    <spectrum type="PowerLaw">
+      <parameter name="Prefactor" value="1" error="0" scale="1" min="0.01" max="100" free="1" />
+      <parameter name="Index" value="0" error="0" scale="1" min="-5" max="5" free="1" />
+      <parameter name="Scale" value="1" scale="1e+06" free="0" />
+    </spectrum>
+  </source>
+</source_library>
