@@ -1,8 +1,9 @@
-2016-06-09  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
+2016-06-20  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
 
         * Version 1.1.0 released
         =========================
 
+        GCTACubeExposure, GCTACubePsf and GCTACubeBackground use energy values (#1788)
         GSkyMap::save() now overwrites files (#1787)
         Add GCTAPsfTable class (#1786)
         Use std::vector for naxes argument in GFitsImage (#1779)
